--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="combodedo.mkt2">
 
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddLocalActivity"></activity>
+        <activity android:name=".GestionDialog"></activity>
+        <activity android:name=".AddLocalActivity" />
         <activity android:name=".EditLocalActivity" />
         <activity android:name=".CardsAdapterLocales" />
         <activity android:name=".CardsAdapterCCs" />
@@ -24,4 +26,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
